@@ -1,7 +1,7 @@
 $LOAD_PATH.unshift(File.join(File.dirname(__FILE__), '../../', 'lib'))
 
 require 'rspec'
-require 'watir'
+require 'watir-webdriver'
 require 'selenium-webdriver'
 require 'page-object'
 
