@@ -10,7 +10,7 @@ require 'page-object/indexed_properties'
 require 'page-object/section_collection'
 require 'page-object/widgets'
 
-require 'watir'
+require 'watir-webdriver'
 require 'page-object/platforms/watir_webdriver/element'
 require 'page-object/platforms/watir_webdriver/page_object'
 require 'page-object/platforms/selenium_webdriver/element'
