@@ -1,4 +1,4 @@
 module PageObject
   # @private
-  VERSION = "1.2.0"
+  VERSION = "1.2.1"
 end
